# research-agent-lesson

./: CLAUDE.md  EXAMPLE_REPORT.md  agents.ipynb  claude-deep-research.sh  pyproject.toml  server_example.py
reports/: nyc_tech_events_2025.md
