[project]
name = "research-ll"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "brave-search>=0.1.8",
    "instructor>=1.5.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "markdownify>=1.1.0",
    "openai>=1.82.0",
]
